@@ -434,7 +434,8 @@ static const ASM_MAPPING _asxxxx_mapping[] = {
    "; ---------------------------------"},
   {"functionlabeldef", "%s:"},
   {"globalfunctionlabeldef", "%s::"},
-  {"bankimmeds", "#b%s"},
+  {"bankimmeds", "b%s"},
+  {"hashedbankimmeds", "#b%s"},
   {"los", "(%s & 0xFF)"},
   {"his", "(%s >> 8)"},
   {"hihis", "(%s >> 16)"},
@@ -486,7 +487,8 @@ static const ASM_MAPPING _asxxxx_smallpdk_mapping[] = {
    "; ---------------------------------"},
   {"functionlabeldef", "%s:"},
   {"globalfunctionlabeldef", "%s::"},
-  {"bankimmeds", "#b%s"},
+  {"bankimmeds", "b%s"},
+  {"hashedbankimmeds", "#b%s"},
   {"los", "(%s & 0xFF)"},
   {"his", "(%s >> 8)"},
   {"hihis", "(%s >> 16)"},
@@ -580,7 +582,8 @@ static const ASM_MAPPING _a390_mapping[] = {
    "; ---------------------------------"},
   {"functionlabeldef", "%s:"},
   {"globalfunctionlabeldef", "%s::"},
-  {"bankimmeds", "0     ; PENDING: bank support"},
+  {"bankimmeds", "b%s"},
+  {"hashedbankimmeds", "#b%s"},
   {"los", "(%s & 0FFh)"},
   {"his", "((%s / 256) & 0FFh)"},
   {"hihis", "((%s / 65536) & 0FFh)"},
